# scraping_job

./: .flake8  .gitignore  Makefile  Procfile  README.md  manage.py  mydata.json  pyproject.toml  requirements.txt  run_scraping.py  send_email.py
.github/workflows/: github-action.yaml
accounts_app/: admin.py  forms.py  models.py  urls.py  views.py
accounts_app/migrations/: 0001_initial.py
accounts_app/templates/accounts_app/: login.html  register.html  register_done.html  update.html
job_ua/: asgi.py  production.py  settings.py  urls.py  wsgi.py
scraping/: forms.py  models.py  parser.py  utils.py  views.py
scraping/migrations/: 0001_initial.py  0002_auto_20211130_1028.py  0002_error.py  0003_alter_error_data.py  0003_auto_20211130_1133.py  0004_url.py  0005_alter_vacancy_options.py
scraping/templates/scraping/: create.html  detail.html  home.html  list.html
static/css/: main.css
templates/: base.html
