[tool.poetry]
name = "job_ua"
version = "0.1.0"
description = ""
authors = ["Alex2218 <alexkravchenko116@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
render = "^1.0.0"
flake8 = "^4.0.1"
slugify = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
