[tool.poetry]
name = "job_ua"
version = "0.1.0"
description = ""
authors = ["Alex2218 <alexkravchenko116@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
render = "^1.0.0"
flake8 = "^4.0.1"
slugify = "^0.0.1"
requests = "^2.26.0"
pip = "^21.3.1"
beautifulsoup4 = "^4.10.0"
autopep8 = "^1.6.0"
django-jsonfield = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
